Check for a namejob being run before opening new createDirectory dialog

BUG:481401